# rust_diesel_actix_web_example

./: Cargo.toml  Readme.md
migrations/2023-03-10-203350_create_users/: up.sql
migrations/2023-03-10-204427_create_photos/: up.sql
migrations/2023-03-11-053255_create_tweets/: up.sql
src/: main.rs  schema.rs
src/app/: db.rs  mod.rs
src/app/tweets/: controller.rs  mod.rs  models.rs  repository.rs  routes.rs
