[package]
name = "rust-actix-diesel-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
config = "0.13.1"
r2d2 = "0.8.10"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
env_logger = "0.10.0"